--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="msvalidate.01" content="AFAD7B164FF001908084675C99784543" />
+	<meta name="google-site-verification" content="xSfmvBOWSLY_4GWkR57Oqyi3Cq7u-8Pl5T03v-jUm3Q" />
     <title>WhatsApp - 隐私安全的即时通讯工具</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
