--- a/index.html
+++ b/index.html
@@ -229,6 +229,16 @@
                         <li><a href="#" class="text-gray-600 hover:text-primary">帮助中心</a></li>
                         <li><a href="#" class="text-gray-600 hover:text-primary">隐私政策</a></li>
                         <li><a href="#" class="text-gray-600 hover:text-primary">服务条款</a></li>
+						<h1><a href="https://www.wps12.com/windows"><strong>WPS Office Windows版下載</strong></a></h1>
+<h1><a href="https://www.drwps.com/"><strong>WPS官方網站下載中心</strong></a></h1>
+<h1><a href="https://telegram2.com/desktop" target="_blank"><strong>Telegram一鍵安裝下載</strong></a></h1>
+<h1><a href="https://telegram22.com/desktop" target="_blank"><strong>Telegram中文下載</strong></a></h1>
+<h1><a href="https://whatsappq.com/whatsapp-web" target="_blank"><strong>WhatsApp網頁版登入</strong></a></h1>
+<h1><a href="https://whatsappq.com/windows" target="_blank"><strong>WhatsApp Windows版下載</strong></a></h1>
+<h1><a href="https://whatsappd.com/web"><strong>WhatsApp Web Login網頁版登入</strong></a></h1>
+<h1><a href="https://whatsappd.com/ios"><strong>WhatsApp iPhone版下載</strong></a></h1>
+<h1><a href="https://whatsappd.com/windows"><strong>WhatsApp電腦版下載</strong></a></h1>
+<h1><a href="https://whatsappd.com/Android"><strong>WhatsApp安卓版下載</strong></a></h1>
                     </ul>
                 </div>
             </div>
@@ -251,15 +261,8 @@
             </div>
         </div>
     </footer>
-	<script>
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "https://hm.baidu.com/hm.js?2df34f15ee3f1163e8ce271e8d455d07";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
-</script>
+<script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
+<script>LA.init({id:"3OGXtsYq4p9jVTbb",ck:"3OGXtsYq4p9jVTbb",autoTrack:true,hashMode:true,screenRecord:true})</script>
 
 </body>
 </html>
